// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CompanyTaxField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="company_tax_id"
      >
        NIP firmy
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        label="NIP firmy"
        name="company_tax_id"
        placeholder="NIP firmy"
        value="948167873"
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podany NIP jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyTaxField/> matches snapshot 1`] = `
<input
  class="sc-iqAbSa jrHUfY"
  id="testId"
  label="NIP firmy"
  name="company_tax_id"
  placeholder="NIP firmy"
  value=""
/>
`;

exports[`<CompanyTaxField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="company_tax_id"
      >
        CompanyTax*
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        label="CompanyTax"
        name="company_tax_id"
        placeholder="NIP firmy*"
        required=""
        value=""
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyTaxField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="company_tax_id"
      >
        Company Tax
      </label>
      <input
        class="sc-iqAbSa jrHUfY"
        id="testId"
        label="Company Tax"
        name="company_tax_id"
        placeholder="NIP firmy"
        value=""
      />
    </div>
  </form>
</div>
`;
